# netpulse

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  netpulse.db
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Build and Release x86_64 DEB and R  deb-arm.yml
.rpm/: netpulse.spec
debian/: control  netpulse.service  postinst  postinst.sh  rules
debian/scripts/: postinst
migrations/: 0001_create_tables.sql
rpm/: netpulse.spec  postinst.sh
scripts/: generate_test_data.rs
src/: db.rs  main.rs  measurements.rs  pdf_export.rs  utils.rs
src/web/: handlers.rs  mod.rs  routes.rs
static/: app.js  chart.js  index.html  style.css
templates/: dashboard.html
