[package]
name = "netpulse"
version = "0.1.0"
authors = ["Andreas Finck <andreas.finck@icloud.com>"]
edition = "2021"
license = "MIT"
description = "NetPulse is a bandwidth monitoring server written in Rust."

[package.metadata.deb]
maintainer = "Andreas Finck <andreas.finck@icloud.com>"
assets = [
    ["target/release/netpulse", "usr/bin/netpulse", "755"]
]
section = "net"
priority = "optional"
depends = "libc6 (>= 2.31), sqlite3, speedtest"

[package.metadata.rpm]
summary = "NetPulse bandwidth monitoring server"
license = "MIT"
requires = ["glibc", "sqlite", "speedtest"]
assets = [
    ["target/release/netpulse", "/usr/bin/netpulse", "755"]
]

[dependencies]
axum = { version = "0.6", features = ["tokio", "macros", "headers"] }
tokio = { version = "1", features = ["full"] }
printpdf = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
plotly = "0.5"     # or the appropriate version for your project
rusqlite = "0.30"
r2d2 = "0.8"
r2d2_sqlite = "0.23"
reqwest = { version = "0.11", features = [ "json", "blocking", "rustls-tls"]}
tower-http = { version = "0.4", features = ["fs"] }
chrono = "0.4.41"

[build-dependencies]
cargo-deb = "1.36"

[[bin]]
name = "generate_test_data"
path = "scripts/generate_test_data.rs"