[package]
name = "netpulse"
version = "0.1.0"
authors = ["Andreas Finck <andreas.finck@icloud.com>"]
edition = "2021"
license = "MIT"
description = "NetPulse is a bandwidth monitoring server written in Rust."
default-run = "netpulse"

[package.metadata.deb]
maintainer = "Andreas Finck <andreas.finck@icloud.com>"
assets = [
    ["target/release/netpulse", "usr/bin/netpulse", "755"]
]
section = "net"
priority = "optional"
depends = "libc6 (>= 2.31), sqlite3"
maintainer-scripts = { postinst = "debian/postinst" }

[package.metadata.rpm]
summary = "NetPulse bandwidth monitoring server"
license = "MIT"
requires = ["glibc", "sqlite"]
assets = [
    ["target/release/netpulse", "/usr/bin/netpulse", "755"]
]
[package.metadata.rpm.targets]
netpulse = {path = "/usr/bin/netpulse"}

[dependencies]
axum = { version = "0.6", features = ["tokio", "macros", "headers"] }
tokio = { version = "1", features = ["full"] }
printpdf = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
plotly = "0.5"     # or the appropriate version for your project
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
reqwest = { version = "0.11", features = [ "json", "blocking", "rustls-tls"]}
tower-http = { version = "0.4", features = ["fs"] }
chrono = "0.4.41"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
cargo-deb = "1.36"
cargo-rpm = "0.8.0"

[[bin]]
name = "generate_test_data"
path = "scripts/generate_test_data.rs"
